--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,8 @@ on:
     branches:
       - main
 
+
+
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
@@ -96,15 +98,15 @@ jobs:
       - name: Configure AWS credentials for Infrastructure
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_INFRA_ROLE_ARN }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          role-to-assume: ${{ vars.AWS_INFRA_ROLE_ARN }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Deploy Infrastructure
         run: make deploy
 
       - name: Verify Infrastructure Deployment
         env:
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_REGION: ${{ vars.AWS_REGION }}
         run: |
           echo "🔧 Verifying infrastructure deployment..."
           
@@ -147,6 +149,9 @@ jobs:
           echo "CLIENT_ID=$(aws cloudformation describe-stacks --stack-name CodeRefactorInfra --query 'Stacks[0].Outputs[?OutputKey==`CognitoUserPoolClientID`].OutputValue' --output text)" >> infrastructure-outputs/env-vars.txt
           echo "HOSTED_UI_URL=$(aws cloudformation describe-stacks --stack-name CodeRefactorInfra --query 'Stacks[0].Outputs[?OutputKey==`CognitoHostedUIURL`].OutputValue' --output text)" >> infrastructure-outputs/env-vars.txt
           echo "ECR_URI=$(aws cloudformation describe-stacks --stack-name CodeRefactorInfra --query 'Stacks[0].Outputs[?OutputKey==`ECRRepositoryURI`].OutputValue' --output text)" >> infrastructure-outputs/env-vars.txt
+          echo "FRONTEND_BUCKET=$(aws cloudformation describe-stacks --stack-name CodeRefactorInfra --query 'Stacks[0].Outputs[?OutputKey==`FrontendBucketName`].OutputValue' --output text)" >> infrastructure-outputs/env-vars.txt
+          echo "CLOUDFRONT_DISTRIBUTION_ID=$(aws cloudformation describe-stacks --stack-name CodeRefactorInfra --query 'Stacks[0].Outputs[?OutputKey==`CloudFrontDistributionID`].OutputValue' --output text)" >> infrastructure-outputs/env-vars.txt
+          echo "CLOUDFRONT_DOMAIN=$(aws cloudformation describe-stacks --stack-name CodeRefactorInfra --query 'Stacks[0].Outputs[?OutputKey==`CloudFrontDistributionDomainName`].OutputValue' --output text)" >> infrastructure-outputs/env-vars.txt
           
           echo "✅ Infrastructure outputs stored!"
 
@@ -173,8 +178,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_INFRA_ROLE_ARN }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          role-to-assume: ${{ vars.AWS_INFRA_ROLE_ARN }}
+          aws-region: ${{ vars.AWS_REGION }}
       
       - name: Download Infrastructure Outputs
         uses: actions/download-artifact@v4
@@ -185,9 +190,10 @@ jobs:
       - name: Update Application Environment Variables
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          APP_REPO: ${{ secrets.APP_REPO_NAME || 'code-refactoring-tool' }}
+          APP_REPO: ${{ vars.APP_REPO_NAME }}
+          UI_REPO: ${{ vars.UI_REPO_NAME }}
         run: |
-          echo "🔧 Updating environment variables in application repository..."
+          echo "🔧 Updating environment variables for both repositories..."
           
           # Source the environment variables
           source infrastructure-outputs/env-vars.txt
@@ -198,20 +204,17 @@ jobs:
           echo "   CLIENT_ID: $CLIENT_ID"
           echo "   HOSTED_UI_URL: $HOSTED_UI_URL"
           echo "   ECR_URI: $ECR_URI"
+          echo "   FRONTEND_BUCKET: $FRONTEND_BUCKET"
+          echo "   CLOUDFRONT_DISTRIBUTION_ID: $CLOUDFRONT_DISTRIBUTION_ID"
+          echo "   CLOUDFRONT_DOMAIN: $CLOUDFRONT_DOMAIN"
           
-          # Create environment file for the application
-          cat > app-env-vars.txt << EOF
-          VITE_API_BASE_URL=$API_URL
-          VITE_COGNITO_USER_POOL_ID=$USER_POOL_ID
-          VITE_COGNITO_CLIENT_ID=$CLIENT_ID
-          VITE_COGNITO_HOSTED_UI_URL=$HOSTED_UI_URL
-          VITE_AWS_REGION=${{ secrets.AWS_REGION }}
-          
-          # Backend environment variables
+          # Create environment file for the backend application
+          cat > backend-env-vars.txt << EOF
+          # Backend API environment variables
           API_GATEWAY_URL=$API_URL
           COGNITO_USER_POOL_ID=$USER_POOL_ID
           COGNITO_CLIENT_ID=$CLIENT_ID
-          COGNITO_REGION=${{ secrets.AWS_REGION }}
+          COGNITO_REGION=${{ vars.AWS_REGION }}
           ECR_REPOSITORY_URI=$ECR_URI
           
           # Database and AWS resources
@@ -222,11 +225,35 @@ jobs:
           BEDROCK_AGENT_ROLE_ARN=$(aws cloudformation describe-stacks --stack-name CodeRefactorInfra --query 'Stacks[0].Outputs[?OutputKey==\`BedrockAgentRoleArn\`].OutputValue' --output text)
           EOF
           
-          echo "✅ Environment variables file created!"
+          # Create environment file for the frontend application  
+          cat > frontend-env-vars.txt << EOF
+          # Frontend environment variables
+          VITE_API_BASE_URL=$API_URL
+          VITE_COGNITO_USER_POOL_ID=$USER_POOL_ID
+          VITE_COGNITO_CLIENT_ID=$CLIENT_ID
+          VITE_COGNITO_HOSTED_UI_URL=$HOSTED_UI_URL
+          VITE_AWS_REGION=${{ vars.AWS_REGION }}
+          VITE_CLOUDFRONT_DOMAIN=https://$CLOUDFRONT_DOMAIN
           
-      - name: Upload Application Environment Variables
+          # Deployment environment variables
+          S3_FRONTEND_BUCKET=$FRONTEND_BUCKET
+          CLOUDFRONT_DISTRIBUTION_ID=$CLOUDFRONT_DISTRIBUTION_ID
+          AWS_REGION=${{ vars.AWS_REGION }}
+          AWS_ROLE_ARN=${{ vars.AWS_INFRA_ROLE_ARN }}
+          EOF
+          
+          echo "✅ Environment variables files created!"
+          
+      - name: Upload Backend Environment Variables
         uses: actions/upload-artifact@v4
         with:
-          name: app-environment-variables
-          path: app-env-vars.txt
+          name: backend-environment-variables
+          path: backend-env-vars.txt
+          retention-days: 90
+
+      - name: Upload Frontend Environment Variables
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-environment-variables
+          path: frontend-env-vars.txt
           retention-days: 90
